[package]
authors = ["Maurice Kayser"]
edition = "2021"
keywords = ["bit", "bitfield", "bitfields", "bitflag", "bitflags", "bitmask", "field", "fields", "flag", "flags", "mask"]
license = "MIT/Apache-2.0"
name = "bitfield"
readme = "README.md"
version = "1.7.6"

[lib]
proc-macro = true

[dependencies]
bitfield-impl = { git = "https://github.com/MauriceKayser/rs-bitfield-impl", rev = "11f6f36ba538289e8826dbe9d97c81977d4e76d1" }
proc-macro2 = "1.0.75"
quote = "1.0.35"
syn = "1.0.109"

[dev-dependencies]
trybuild = "1.0.87"

[dev-dependencies.proc-macro2]
version = "1.0.75"
features = [ "span-locations" ]