[package]
authors = ["Maurice Kayser"]
edition = "2021"
keywords = ["bit", "bitfield", "bitfields", "bitflag", "bitflags", "bitmask", "field", "fields", "flag", "flags", "mask"]
license = "MIT/Apache-2.0"
name = "bitfield"
readme = "README.md"
version = "1.8.1"

[lib]
proc-macro = true

[dependencies]
bitfield-impl = { path = "impl" }
proc-macro2 = "1.0.75"
quote = "1.0.35"
syn = "1.0.109"

[dev-dependencies]
trybuild = "1.0.87"

[dev-dependencies.proc-macro2]
version = "1.0.75"
features = [ "span-locations" ]